<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">


    <EditText
        android:id="@+id/age"
        android:layout_width="367dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="Age"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="367dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/weight_in_kilograms"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/height"
        android:layout_width="367dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/activitySpinner"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/activity_level"
        app:layout_constraintStart_toStartOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <Spinner
        android:id="@+id/sex_spinner"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="272dp"
        android:text="@string/sex"
        app:layout_constraintStart_toStartOf="@+id/height"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex_spinner" />

    <Button
        android:id="@+id/buttonResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/compute_bmr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/bmr"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textResult"
        app:layout_constraintTop_toTopOf="@+id/textResult" />


</androidx.constraintlayout.widget.ConstraintLayout>