<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="10dp"
    android:background="@drawable/round_border"
    android:layout_margin="5dp"
    >

    <LinearLayout
        android:id="@+id/header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:paddingLeft="15dp"
                android:text="Zacusca de alune"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                />

        </LinearLayout>


        <LinearLayout
            android:gravity="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:id="@+id/caloreisLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:text="@string/calories"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:textStyle="bold"
                android:paddingRight="15dp"
                android:id="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"

        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/header">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:layout_width="0dp"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/proteinsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proteins"
                android:layout_marginRight="1dp"
                android:textColor="@color/proteinColor"
                android:layout_marginEnd="1dp" />

            <TextView
                android:textSize="15sp"
                android:id="@+id/proteins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/proteinColor"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:layout_width="0dp"
            android:orientation="horizontal">
            <TextView
                android:textSize="15sp"
                android:id="@+id/carbsLabel"
                android:layout_marginRight="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbs"
                android:layout_marginEnd="1dp"
                android:textColor="@color/carbsColor"
                android:textStyle="bold"/>
            <TextView
                android:textSize="15sp"
                android:id="@+id/carbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/carbsColor"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:orientation="horizontal">

            <TextView
                android:textSize="15sp"
                android:id="@+id/fatLabel"
                android:layout_marginRight="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat"
                android:layout_marginEnd="1dp"
                android:textColor="@color/fatColor"
                android:textStyle="bold"
                />

            <TextView
                android:textSize="15sp"
                android:id="@+id/fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/fatColor"
                android:textStyle="bold"
                />
        </LinearLayout>



    </LinearLayout>

</RelativeLayout>